# s2-cli

./: CLAUDE.md  Cargo.toml  FAILURE_BEHAVIOR.md  INPUTS.md  OUTPUTS.md  README.md  TOOL.md
.github/workflows/: def-audit.yml
src/: main.rs
