[package]
name = "s2-cli"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
dotenvy = "0.15"
futures = "0.3"
